force-app/main/default/objects/Opportunity/fields/Anastasiya_Field__c.field-meta.xml
<CustomField>
    <fullName>Anastasiya_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anastasiya Field</label>
    <type>Checkbox</type>
</CustomField>