force-app/main/default/objects/Opportunity/fields/Jasons_Field__c.field-meta.xml
<CustomField>
    <fullName>Jasons_Field__c</fullName>
    <label>Jasons Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>