force-app/main/default/objects/Opportunity/fields/LEF_Field__c.field-meta.xml
<CustomField>
    <fullName>LEF_Field__c</fullName>
    <label>LEF-Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>