force-app/main/default/objects/Opportunity/fields/LuisField__c.field-meta.xml
<CustomField>
    <fullName>LuisField__c</fullName>
    <label>LuisField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>