force-app/main/default/objects/Opportunity/fields/Rick_Field__c.field-meta.xml
<CustomField>
    <fullName>Rick_Field__c</fullName>
    <label>Rick Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>