force-app/main/default/objects/Opportunity/fields/Scotts_Field__c.field-meta.xml
<CustomField>
    <fullName>Scotts_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scotts Field</label>
    <type>Checkbox</type>
</CustomField>